@@ -1,3 +1,8 @@
+2007-11-08  Daniel Morales  <daniminas@gmail.com>
+
+	* src/twitux-label.[ch]: Add initial code to support URLs and @nicknames
+	using libsexy.
+
 2007-10-26  Daniel Morales  <daniminas@gmail.com>
 
 	* src/twitux-network.c: Minor correction on network code.
